Updating index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   </head>
   <body class="default-width">
     <header>
-      <h1>Fables: Books and Gifts Shop</h1>
+      <h1>Fables</h1>
+      <h2>Books and Gifts Shop</h2>
     </header>
   </body>
 </html>
